--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "displayName": "Syntax Highlighter",
     "description": "Syntax highlighting based on Tree-sitter",
     "homepage": "https://github.com/EvgeniyPeshkov/syntax-highlighter",
-    "version": "0.5.1",
-    "publisher": "evgeniypeshkov",
+    "version": "0.1.1",
+    "publisher": "tinygiant",
     "license": "MIT",
     "icon": "images/syntax.png",
     "galleryBanner": {
@@ -31,39 +31,10 @@
         "Coloring",
         "Tree-Sitter",
         "Parser",
-        "C",
-        "C++",
-        "CPP",
-        "Python",
-        "TypeScript",
-        "TS",
-        "TypeScriptReact",
-        "TSX",
-        "JavaScript",
-        "JS",
-        "Go",
-        "Rust",
-        "Php",
-        "Ruby",
-        "ShellScript",
-        "Bash",
-        "OCaml",
-        "Lua"
+        "NwScript"
     ],
     "activationEvents": [
-        "onLanguage:c",
-        "onLanguage:cpp",
-        "onLanguage:python",
-        "onLanguage:typescript",
-        "onLanguage:typescriptreact",
-        "onLanguage:javascript",
-        "onLanguage:go",
-        "onLanguage:rust",
-        "onLanguage:php",
-        "onLanguage:ruby",
-        "onLanguage:shellscript",
-        "onLanguage:ocaml",
-        "onLanguage:lua"
+        "onLanguage:nwscript"
     ],
     "main": "./out/extension.js",
     "scripts": {
@@ -86,23 +57,17 @@
         "ovsx": "0.1.0-next.a9154dc",
         "tree-sitter": "^0.19.0",
         "tree-sitter-bash": "^0.19.0",
-        "tree-sitter-c": "^0.19.0",
-        "tree-sitter-cli": "^0.19.4",
-        "tree-sitter-cpp": "^0.19.0",
-        "tree-sitter-go": "^0.19.1",
-        "tree-sitter-javascript": "^0.19.0",
-        "tree-sitter-lua": "^1.6.2",
-        "tree-sitter-ocaml": "^0.19.0",
-        "tree-sitter-php": "^0.19.0",
-        "tree-sitter-python": "^0.19.0",
-        "tree-sitter-ruby": "github:tree-sitter/tree-sitter-ruby#v0.19.0",
-        "tree-sitter-rust": "^0.19.1",
-        "tree-sitter-typescript": "^0.19.0",
         "tslint": "^6.1.2",
         "typescript": "^3.9.3",
         "vsce": "^1.87.0"
     },
     "contributes": {
+        "editor.semanticTokenColorCustomizations": {
+            "enabled": true,
+            "rules" : {
+                "nwnsc": "#bd3c92"
+            }
+        },
         "semanticTokenTypes": [
             {
                 "id": "punctuation",
@@ -121,6 +86,22 @@
                 }
             }
         ],
+        "languages": [{
+            "id": "nwscript",
+            "aliases": ["Neverwinter Script", "nwscript"],
+            "extensions": [".nss"],
+            "configuration": "./language-configuration.json"
+        }],
+        "grammars": [{
+            "language": "nwscript",
+            "scopeName": "source.nss",
+            "path": "./syntaxes/nwscript.tmLanguage"
+        }],
+        "configurationDefaults": {
+            "[nwscript]": {
+                "editor.semanticHighlighting.enabled": true
+            }
+        },
         "configuration": {
             "title": "{Syntax Highlighter} configuration",
             "properties": {
@@ -133,19 +114,7 @@
                     "description": "Enabled languages",
                     "type": "array",
                     "default": [
-                        "c",
-                        "cpp",
-                        "python",
-                        "typescript",
-                        "typescriptreact",
-                        "javascript",
-                        "go",
-                        "rust",
-                        "php",
-                        "ruby",
-                        "shellscript",
-                        "ocaml",
-                        "lua"
+                        "nwscript"
                     ]
                 },
                 "syntax.highlightTerms": {
@@ -164,7 +133,8 @@
                         "control",
                         "operator",
                         "modifier",
-                        "punctuation"
+                        "punctuation",
+                        "nwnsc"
                     ]
                 },
                 "syntax.debugHover": {
