--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
 		"outDir": "out",
 		"lib": ["es6"],
 		"sourceMap": true,
-		"rootDir": "src"
+		"rootDir": "src",
+		"watch": true
 	},
 	"exclude": ["node_modules", ".vscode-test"]
 }
